Final revision of my project.

--- a/Charles Truluck/Base.lproj/Main.storyboard
+++ b/Charles Truluck/Base.lproj/Main.storyboard
@@ -59,22 +59,12 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="me-Icon" translatesAutoresizingMaskIntoConstraints="NO" id="Ytb-G2-fCy">
-                                <rect key="frame" x="180" y="143" width="240" height="240"/>
+                                <rect key="frame" x="180" y="118" width="240" height="240"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="240" id="bfW-bO-GpO"/>
-                                    <constraint firstAttribute="width" constant="240" id="s1D-hK-q6w"/>
+                                    <constraint firstAttribute="width" constant="240" id="gY1-Sx-FvN"/>
+                                    <constraint firstAttribute="height" constant="240" id="p2E-3g-F7m"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello There!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a0o-uk-gPv">
-                                <rect key="frame" x="206" y="282" width="188" height="35"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="Xnb-HY-3Vu"/>
-                                    <constraint firstAttribute="width" constant="188" id="fFN-XM-10p"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u6A-ka-eYm">
                                 <rect key="frame" x="239" y="455" width="122" height="30"/>
                                 <constraints>
@@ -100,6 +90,16 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello There!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a0o-uk-gPv">
+                                <rect key="frame" x="206" y="282" width="188" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="Xnb-HY-3Vu"/>
+                                    <constraint firstAttribute="width" constant="188" id="fFN-XM-10p"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -107,10 +107,10 @@
                             <constraint firstItem="7Kb-ab-5tX" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="2lH-Ci-qjM"/>
                             <constraint firstAttribute="centerX" secondItem="i9X-hX-8kr" secondAttribute="centerX" id="3J8-bc-gco"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="ZTb-uz-g6b" secondAttribute="bottom" id="7ET-Ib-2xN"/>
-                            <constraint firstAttribute="centerX" secondItem="Ytb-G2-fCy" secondAttribute="centerX" id="7LV-dU-ogp"/>
                             <constraint firstAttribute="centerX" secondItem="u6A-ka-eYm" secondAttribute="centerX" id="9pa-WR-8QV"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="SK0-6V-fLE" secondAttribute="bottom" constant="42" id="DY0-eQ-Xvn"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="i9X-hX-8kr" secondAttribute="bottom" constant="-50" id="Gqu-4P-PMp"/>
+                            <constraint firstItem="Ytb-G2-fCy" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="98" id="Hdu-wh-kUi"/>
                             <constraint firstAttribute="centerX" secondItem="ZTb-uz-g6b" secondAttribute="centerX" constant="10.5" id="SeB-Xr-euK"/>
                             <constraint firstItem="SK0-6V-fLE" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="Sxt-3R-U17"/>
                             <constraint firstItem="i9X-hX-8kr" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" constant="-50" id="WhT-2M-9nA"/>
@@ -119,8 +119,8 @@
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="7Kb-ab-5tX" secondAttribute="bottom" constant="42" id="dFi-H0-r2T"/>
                             <constraint firstAttribute="centerX" secondItem="a0o-uk-gPv" secondAttribute="centerX" id="fST-Vl-9Ox"/>
                             <constraint firstItem="a9b-jZ-dBf" firstAttribute="top" secondItem="u6A-ka-eYm" secondAttribute="bottom" constant="94" id="tBc-Yd-FKm"/>
+                            <constraint firstAttribute="centerX" secondItem="Ytb-G2-fCy" secondAttribute="centerX" id="v3S-2R-ikI"/>
                             <constraint firstItem="a9b-jZ-dBf" firstAttribute="leading" secondItem="ZTb-uz-g6b" secondAttribute="trailing" id="zFn-sZ-DI8"/>
-                            <constraint firstItem="Ytb-G2-fCy" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="123" id="zQg-uS-lcb"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="QAp-pV-dEW"/>
@@ -151,22 +151,55 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TSk-9h-Dnx">
-                                <rect key="frame" x="0.0" y="0.0" width="46" height="30"/>
-                                <state key="normal" title="Button">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TSk-9h-Dnx">
+                                <rect key="frame" x="250" y="20" width="101" height="51"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.20000000000000001" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="101" id="E94-Z7-iL1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="32"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" red="1" green="0.26929130034284809" blue="0.11076228815220257" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <segue destination="vXZ-lx-hvc" kind="show" id="21W-Yi-O7F"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Help Charles get to WWDC!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RJr-Ko-bh4">
+                                <rect key="frame" x="162" y="79" width="276" height="28"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="23"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to fly Charles to Moscone Center!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NMg-7g-XbB">
+                                <rect key="frame" x="162" y="535" width="276" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="5Ke-gg-Llm"/>
+                                    <constraint firstAttribute="width" constant="276" id="QZr-yZ-toc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="TSk-9h-Dnx" firstAttribute="top" secondItem="WDq-66-9aF" secondAttribute="bottom" id="2fX-EE-K63"/>
+                            <constraint firstItem="RJr-Ko-bh4" firstAttribute="centerX" secondItem="TSk-9h-Dnx" secondAttribute="centerX" id="9WE-It-pKQ"/>
+                            <constraint firstItem="TSk-9h-Dnx" firstAttribute="centerX" secondItem="Igd-D1-kMN" secondAttribute="centerX" id="C6C-1T-DMA"/>
+                            <constraint firstItem="kNN-nD-Icb" firstAttribute="top" secondItem="NMg-7g-XbB" secondAttribute="bottom" constant="20" id="DM3-R1-ZrF"/>
+                            <constraint firstItem="RJr-Ko-bh4" firstAttribute="top" secondItem="TSk-9h-Dnx" secondAttribute="bottom" constant="8" symbolic="YES" id="MY3-b9-07v"/>
+                            <constraint firstAttribute="centerX" secondItem="NMg-7g-XbB" secondAttribute="centerX" id="lk3-uk-b4s"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="backButton" destination="TSk-9h-Dnx" id="jYq-qI-xaa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fHy-41-0fk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1060" y="982"/>
+            <point key="canvasLocation" x="948" y="1146"/>
         </scene>
         <!--About Me View Controller-->
         <scene sceneID="jhk-cW-vcV">
